<resources>
    <string name="app_name">School Scheduler</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="log_in">log_in</string>
    <string name="sign_up">sign_up</string>
    <string name="number_of_attempts_5">number_of_attempts_5</string>

    <!--task-->
    <string name="enter_title">New Task</string>
    <string name="subject_string">Subject:</string>
    <string name="type_string">Type:</string>
    <string name="due_string">Due:</string>
    <string name="no_date_set_string">00/00/0000</string>
    <string name="no_time_set_string">00:00 AM</string>
    <string name="change_date_string">Change Date</string>
    <string name="change_time_string">Change Time</string>
    <string name="priority_string">Priority: </string>
    <string name="title_string">Title</string>
    <string name="priority_low_string">Low</string>
    <string name="priority_medium_string">Medium</string>
    <string name="priority_high_string">High</string>
    <string name="enter_details_string">Enter Details</string>
    <string name="spinner_prompt">Select</string>
    <string-array name="subject_list">
        <item>English</item>
        <item>Math</item>
        <item>Chemistry</item>
        <item>Physics</item>
        <item>Economics</item>
        <item>Computer Science</item>
        <item>Biology</item>
        <item>Other</item>
    </string-array>
    <string-array name="task_type_list">
        <item>Homework</item>
        <item>Project</item>
        <item>Meeting</item>
        <item>Other</item>
    </string-array>
    <string name="empty_list">Tap on the plus to add new to-do items.</string>
    <string name="main_page">Main Page</string>
    <string name="login_signup">Login/Signup</string>

    <string name="schoolscheduler">SchoolScheduler</string>
    <string name="the_only_school_scheduler_you_will_ever_need">The only school scheduler you will ever need</string>
    <string name="todo">TODO</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>

    <!--task-->
    <string name="back">Back</string>
    <string name="calendarText">Calendar</string>
    <string name="doneText">Done</string>

    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="logout">Logout</string>

    <string name="notification">Notification</string>
    <string name="default_sound">Default Sound</string>

    <!--rigntone-->
    <string-array name="songs">
        <item> </item>
        <item>Ringtone 1</item>
        <item>Ringtone 2</item>
        <item>Ringtone 3</item>
    </string-array>
    <string name="add_class">Add a class...</string>
    <string name="course_name">Course Title</string>
    <string name="abbr_monday">Mon</string>
    <string name="abbr_tuesday">Tue</string>
    <string name="abbr_wednesday">Wed</string>
    <string name="abbr_thursday">Thu</string>
    <string name="abbr_friday">Fri</string>
    <string name="abbr_saturday">Sat</string>
    <string name="abbr_sunday">Sun</string>
    <string name="startText">Start Time</string>
    <string name="endText">End Time</string>
    <string name="addClassButton">Add Class</string>
    <string name="schedule">Schedule</string>



</resources>
