<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/setCourseEndTimeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:text="@string/change_time_string"
        app:layout_constraintStart_toEndOf="@+id/courseTimeStartView"
        app:layout_constraintTop_toBottomOf="@+id/setCourseStartTimeButton" />

    <TextView
        android:id="@+id/courseTimeEndView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="26dp"
        android:text="@string/no_time_set_string"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/courseTimeStartView" />

    <TextView
        android:id="@+id/headerText"
        android:layout_width="287dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="104dp"
        android:text="@string/add_class"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editCourseTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/course_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerText" />

    <TextView
        android:id="@+id/courseTimeStartView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/no_time_set_string"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editCourseTitle" />

    <Button
        android:id="@+id/setCourseStartTimeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="12dp"
        android:text="@string/change_time_string"
        app:layout_constraintStart_toEndOf="@+id/courseTimeStartView"
        app:layout_constraintTop_toBottomOf="@+id/editCourseTitle" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        style="@android:style/Widget.Material.HorizontalScrollView"
        android:layout_width="wrap_content"
        android:layout_height="83dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fillViewport="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setCourseEndTimeButton">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/DaySelector"
                android:layout_width="wrap_content"
                android:layout_height="52dp"
                android:layout_marginTop="20dp"
                app:chipSpacingHorizontal="8dp"
                app:selectionRequired="true"
                app:singleLine="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/Sunday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/abbr_sunday" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/Monday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/abbr_monday" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/Tuesday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/abbr_tuesday" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/Wednesday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/abbr_wednesday" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/Thursday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/abbr_thursday" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/Friday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/abbr_friday" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/Saturday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/abbr_saturday" />
            </com.google.android.material.chip.ChipGroup>
        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/startText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="256dp"
        android:text="@string/startText"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toEndOf="@+id/setCourseStartTimeButton"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/endText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="31dp"
        android:text="@string/endText"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toEndOf="@+id/setCourseEndTimeButton"
        app:layout_constraintTop_toBottomOf="@+id/startText" />

    <Button
        android:id="@+id/addClass"
        android:layout_width="287dp"
        android:layout_height="59dp"
        android:layout_marginTop="40dp"
        android:text="@string/addClassButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.604"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />
</androidx.constraintlayout.widget.ConstraintLayout>