<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:scrollbarSize="10dp">

    <EditText
        android:id="@+id/edit_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:inputType="textShortMessage"
        android:maxLength="30"
        android:textColorLink="#FFFFFF"
        android:textSize="24sp">

        <requestFocus />
    </EditText>

    <!-- Subject -->

    <TextView
        android:id="@+id/edit_subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_title"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:text="@string/subject_string"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#1D1A22"/>

    <EditText
        android:id="@+id/edit_subject_s"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_title"
        android:layout_marginStart="4dp"
        android:layout_marginTop="-4dp"
        android:layout_toEndOf="@id/edit_subject"
        android:ems="6"
        android:entries="@array/subject_list"
        android:prompt="@string/spinner_prompt" />

    <!-- Type -->

    <TextView
        android:id="@+id/edit_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_subject"
        android:layout_alignEnd="@id/edit_subject"
        android:layout_marginTop="12dp"
        android:text="@string/type_string"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#1D1A22"/>

    <EditText
        android:id="@+id/edit_type_s"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_subject"
        android:layout_marginStart="4dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@id/edit_type"
        android:entries="@array/task_type_list"
        android:ems="5"
        android:prompt="@string/spinner_prompt" />

    <!-- Date -->

    <TextView
        android:id="@+id/edit_date_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_type"
        android:layout_alignEnd="@id/edit_subject"
        android:layout_marginTop="12dp"
        android:text="@string/due_string"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#1D1A22"/>

    <TextView
        android:id="@+id/edit_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/edit_date_string"
        android:layout_marginStart="12dp"
        android:layout_toEndOf="@id/edit_date_string"
        android:text="@string/no_date_set_string"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/edit_date_picker_button"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_below="@id/edit_type"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@id/edit_date"
        android:text="@string/change_date_string" />




    <!-- Details -->

    <EditText
        android:id="@+id/edit_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_date"
        android:layout_alignParentStart="true"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:gravity="top|start"
        android:hint="@string/enter_details_string"
        android:inputType="textMultiLine"
        android:maxLines="10"
        android:minLines="1" />

    <Button
        android:id="@+id/edit_canceladdbutton"
        android:layout_width="150dp"
        android:layout_height="64dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="34dp"
        android:layout_marginTop="400dp"
        android:text="Cancel" />

    <Button
        android:id="@+id/edit_savebutton"
        android:layout_width="171dp"
        android:layout_height="64dp"
        android:layout_alignParentStart="true"

        android:layout_alignParentEnd="true"

        android:layout_marginStart="191dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="34dp"
        android:text="Save" />
</RelativeLayout>