<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:scrollbarSize="10dp">

    <EditText
        android:id="@+id/new_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/enter_title"
        android:inputType="textShortMessage"
        android:maxLength="30"
        android:textColorLink="#FFFFFF"
        android:textSize="24sp">

        <requestFocus />
    </EditText>

    <!-- Subject -->

    <TextView
        android:id="@+id/new_subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_title"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:text="@string/subject_string"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#1D1A22" />

    <!-- Type -->

    <EditText
        android:id="@+id/new_subject_s"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/new_title"
        android:layout_marginStart="4dp"
        android:layout_marginTop="-4dp"
        android:layout_toEndOf="@id/new_subject"
        android:ems="6"
        android:entries="@array/subject_list"
        android:prompt="@string/spinner_prompt" />

    <TextView
        android:id="@+id/new_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_subject"
        android:layout_alignEnd="@id/new_subject"
        android:layout_marginTop="12dp"
        android:text="@string/type_string"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#1D1A22"/>

    <EditText
        android:id="@+id/new_type_s"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/new_subject"
        android:layout_marginStart="4dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@id/new_type"
        android:entries="@array/task_type_list"
        android:ems="5"
        android:prompt="@string/spinner_prompt" />

    <!-- Date -->

    <TextView
        android:id="@+id/new_date_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/new_type"
        android:layout_alignEnd="@id/new_subject"
        android:layout_marginTop="12dp"
        android:text="@string/due_string"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#1D1A22"/>

    <TextView
        android:id="@+id/new_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/new_date_string"
        android:layout_marginStart="12dp"
        android:layout_toEndOf="@id/new_date_string"
        android:text="@string/no_date_set_string"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/black" />

    <!-- Priority -->

    <Button
        android:id="@+id/new_date_picker_button"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_below="@id/new_type"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@id/new_date"
        android:text="@string/change_date_string" />

    <!-- Details -->


    <EditText
        android:id="@+id/new_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/new_date"
        android:layout_alignParentStart="true"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:gravity="top|start"
        android:hint="@string/enter_details_string"
        android:inputType="textMultiLine"
        android:maxLines="10"
        android:minLines="1" />

    <TextView
        android:id="@+id/new_alarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/new_details"
        android:layout_marginTop="12dp"
        android:text="Set Alarm:"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#1D1A22"/>

    <TextView
        android:id="@+id/alarm_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/new_alarm"
        android:layout_marginTop="12dp"
        android:text="Date:"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="14dp"
        android:layout_marginStart="40dp"
        android:textColor="#1D1A22"/>


    <TextView
        android:id="@+id/alarm_date_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/new_alarm"
        android:layout_marginStart="80dp"
        android:layout_marginTop="36dp"
        android:text="@string/no_date_set_string"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/black"
        android:textSize="14dp" />

    <Button
        android:id="@+id/alarm_date_picker_button"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_below="@id/new_alarm"
        android:layout_marginStart="15dp"
        android:layout_marginTop="7dp"
        android:layout_toEndOf="@id/new_date"
        android:text="PICK DATE" />

    <TextView
        android:id="@+id/alarm_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/alarm_date"
        android:layout_marginTop="12dp"
        android:text="Time:"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="14dp"
        android:layout_marginStart="40dp"
        android:textColor="#1D1A22"/>

    <TextView
        android:id="@+id/alarm_time_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/alarm_date"
        android:layout_marginStart="80dp"
        android:layout_marginTop="32dp"
        android:text="00:00"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/black"
        android:textSize="14dp" />

    <Button
        android:id="@+id/alarm_time_picker_button"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_below="@id/alarm_date"
        android:layout_marginStart="15dp"
        android:layout_marginTop="7dp"
        android:layout_toEndOf="@id/new_date"
        android:text="PICK TIME" />


    <Button
        android:id="@+id/new_canceladdbutton"
        android:layout_width="150dp"
        android:layout_height="64dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="34dp"
        android:layout_marginTop="400dp"
        android:text="Cancel" />

    <Button
        android:id="@+id/new_savechangebutton"
        android:layout_width="171dp"
        android:layout_height="64dp"
        android:layout_alignParentStart="true"

        android:layout_alignParentEnd="true"

        android:layout_marginStart="191dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="34dp"
        android:text="Save" />
</RelativeLayout>